--- a/Project/index.html
+++ b/Project/index.html
@@ -12,12 +12,21 @@
 <body>
     <header>
         <div class="container">
-            <div class="logo"><h2>Danki Code</h2></div>
+            <div class="logo"><a href=""></a><h2><a href="index.html">Danki Code</a></h2></div>
             <nav class="menu-desktop">
                 <ul>
-                    <li class="selected"><a href="">Home</a></li>
-                    <li><a href="">Sobre</a></li>
-                    <li><a href="">Contato</a></li>
+                    <li class="selected"><a href="index.html">Home</a></li>
+                    <li><a href="sobre.html">Sobre</a></li>
+                    <li><a href="contato.html">Contato</a></li>
+                </ul>
+            </nav>
+
+            <nav class="menu-mobile">
+                <h2><i class="fa fa-bars"></i></h2>
+                <ul>
+                    <li class="selected"><a href="index.html">Home</a></li>
+                    <li><a href="sobre.html">Sobre</a></li>
+                    <li><a href="contato.html">Contato</a></li>
                 </ul>
             </nav>
         </div>
@@ -166,5 +175,12 @@
     <footer class="footer2">
         <p>Todos os direitos reservados</p>
     </footer>
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    <script>
+        $('nav.menu-mobile h2').click(function(){
+            $('nav.menu-mobile ul').slideToggle()
+        })
+    </script>
 </body>
 </html>
